@@ -88,6 +88,11 @@ sub new {
     return $self;
 }
 
+sub DESTROY {
+    my $self = shift;
+    $self->_DESTROY;
+}
+
 ######################################################################
 ####  Accessors
 
