@@ -54,6 +54,11 @@ sub new {
     return $self;
 }
 
+sub DESTROY {
+    my $self = shift;
+    $self->_DESTROY;
+}
+
 sub open {
     my $self = shift;
     my %params = (
