@@ -68,4 +68,14 @@ sub files_identical {
     return 1;
 }
 
+sub get_memory_usage {
+    # Return memory usage.  Return 0 if the system doesn't look quite right.
+    my $fh = IO::File->new("</proc/self/statm");
+    return 0 if !$fh;
+
+    my $stat = $fh->getline || "";
+    my @stats = split /\s+/, $stat;
+    return $stats[0]||0;  # vmsize
+}
+
 1;
